--- a/src/blocks/tabs/tabs/style.scss
+++ b/src/blocks/tabs/tabs/style.scss
@@ -4,6 +4,8 @@
 	$border_color: #ebeef1;
 	$border_width: 1px;
 
+	position: relative;
+
 	&__nav-links {
 		list-style: none;
 		display: flex;
@@ -68,18 +70,21 @@
 		}
 	}
 
-	&__tab-content {
-		border: #{$border_width} solid #{$border_color};
-		padding: 1.5em;
+	&__tab-content-wrapper {
 		display: block !important;
-		position: absolute;
-		clip: rect(0, 0, 0, 0);
+		height: 0;
+		overflow: hidden;
 
 		&.is-active-tab,
 		&[aria-hidden="false"] {
-			position: static;
-			clip: auto;
+			height: auto;
+			overflow: visible;
 		}
+	}
+
+	&__tab-content {
+		border: #{$border_width} solid #{$border_color};
+		padding: 1.5em;
 
 		> * {
 			&:first-child {
@@ -101,7 +106,7 @@
 	.wp-block-getwid-tabs__nav-links {
 		flex-direction: column;
 		align-items: initial;
-		flex: 0 1 auto;
+		flex: 1 0 auto;
 		margin: 0 -1px 0 0;
 		max-width: 25%;
 	}
@@ -121,8 +126,9 @@
 		}
 	}
 
-	.wp-block-getwid-tabs__tab-content {
-		flex: 1;
+	.wp-block-getwid-tabs__tab-content-wrapper {
+		flex: 0 1 auto;
+		min-width: 0;
 	}
 }
 
